--- a/dev/views/templates/template.pug
+++ b/dev/views/templates/template.pug
@@ -2,6 +2,11 @@ include ../config/config
 <!DOCTYPE html>
 html(lang="es")
     head
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-176579971-1")
+        script(src="js/google-analytics.js")
+
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
