--- a/dev/scss/blocks/_products.scss
+++ b/dev/scss/blocks/_products.scss
@@ -2,7 +2,7 @@
   height: 35px;
   //background: linear-gradient(to bottom, $text-color4 0%, $text-color4 25%, $text-color4 50%, $text-color2 75%, $text-color2 100%);
   background-color: $text-color3;
-  padding-left: .5rem;
+  padding-left: 1rem;
   color: $text-color;
   display: flex;
   align-items: center;
