--- a/dev/views/includes/burger-ingredients.pug
+++ b/dev/views/includes/burger-ingredients.pug
@@ -9,11 +9,29 @@
             img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h3 Con menú:
+                p Hamburguesa normal +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #crispycukys-burger-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes hamburguesa crispy-cukys:
         each crispyCukysIngredients in crispyCukysBurgerIngredients
             li= crispyCukysIngredients
+        center
+            h4 Alérgenos:
+
+            h3 Con menú:
+                p Hamburguesa Crispy-Cukys +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #egg-burger-ingredients.lightbox
     ul.ingredients
@@ -27,6 +45,14 @@
             img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h3 Con menú:
+                p Hamburguesa con huevo +Bebida +Patatas
+                p 4,80€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #bacon-burger-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes hamburguesa con bacon:
@@ -37,6 +63,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+                p Hamburguesa con bacon +Bebida +Patatas
+                p 4,80€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #cheese-burger-ingredients.lightbox
     ul.ingredients
@@ -49,6 +83,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h3 Con menú:
+                p Hamburguesa con queso +Bebida +Patatas
+                p 4,80€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #super-burger-ingredients.lightbox
     ul.ingredients
@@ -63,14 +105,42 @@
             img.ingredients__allergen(src='assets/img/gallery/sesameGrains.svg' alt='sesame grains')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h3 Con menú:
+                p Hamburguesa super +Bebida +Patatas
+                p 5,40€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #premiumbovine-burger-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes hamburguesa premium vacuno:
         each premiumBovineIngredients in premiumBovineBurgerIngredients
             li= premiumBovineIngredients
+        center
+            h4 Alérgenos:
+
+            h3 Con menú:
+                p Hamburguesa premium vacuno +Bebida +Patatas
+                p 5,00€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #burgerxl-burger-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes hamburguesa XL:
         each burgerXLIngredients in burgerXLBurgerIngredients
             li= burgerXLIngredients
+        center
+            h4 Alérgenos:
+
+            h3 Con menú:
+                p Hamburguesa XL +Bebida +Patatas
+                p 5,00€
+                .ingredients__img
+                    img(src="assets/img/burger-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
