--- a/dev/views/includes/guitar-ingredients.pug
+++ b/dev/views/includes/guitar-ingredients.pug
@@ -8,6 +8,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Guitarra de jamón +Bebida +Patatas
+                p 5,00€
+                .ingredients__img
+                    img(src="assets/img/guitar-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #chicken-guitar-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes guitarra de pollo:
@@ -17,6 +25,14 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Guitarra de pollo +Bebida +Patatas
+                p 5,00€
+                .ingredients__img
+                    img(src="assets/img/guitar-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #loin-guitar-ingredients.lightbox
     ul.ingredients
@@ -28,6 +44,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Guitarra de lomo +Bebida +Patatas
+                p 5,00€
+                .ingredients__img
+                    img(src="assets/img/guitar-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #tortilla-guitar-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes guitarra de tortilla francesa:
@@ -38,3 +62,11 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Guitarra tortilla jamón +Bebida +Patatas
+                p 5,00€
+                .ingredients__img
+                    img(src="assets/img/guitar-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
