--- a/dev/views/includes/hotdog-ingredients.pug
+++ b/dev/views/includes/hotdog-ingredients.pug
@@ -10,3 +10,11 @@
             img.ingredients__allergen(src='assets/img/gallery/mustard.svg' alt='mustard')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Perrito caliente +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/hotdog-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
