--- a/dev/views/includes/main-products.pug
+++ b/dev/views/includes/main-products.pug
@@ -5,8 +5,7 @@
         each starter in starters
             li
                 span.item1= starter
-                span.item2(id="info-starter-" + starters.indexOf(starter) data-name="starter") Ver alérgenos
-                span.item4(id="menu-starter-"+starters.indexOf(starter) data-name="starter") Con menú
+                span.item2(id="info-starter-" + starters.indexOf(starter) data-name="starter") HAZLO MENÚ / +INFO
                 span.item3= priceStarters[starters.indexOf(starter)]
     .products__image
         img(src="assets/img/fried.png" alt="starter")
@@ -29,8 +28,7 @@
         each burger in burgers
             li
                 span.item1= burger
-                span.item2(id="info-burger-"+burgers.indexOf(burger) data-name="burger") Ingredientes
-                span.item4(id="menu-burger-"+burgers.indexOf(burger) data-name="burger") Con menú
+                span.item2(id="info-burger-"+burgers.indexOf(burger) data-name="burger") HAZLO MENÚ / +INFO
                 span.item3= priceBurgers[burgers.indexOf(burger)]
     .products__image
         img(src="assets/img/burger.png" alt="burger")
@@ -41,8 +39,7 @@
         each guitar in guitars
             li
                 span.item1= guitar
-                span.item2(id="info-guitar-" + guitars.indexOf(guitar) data-name="guitar") Ingredientes
-                span.item4(id="menu-guitar-"+guitars.indexOf(guitar) data-name="guitar") Con menú
+                span.item2(id="info-guitar-" + guitars.indexOf(guitar) data-name="guitar") HAZLO MENÚ / +INFO
                 span.item3= priceGuitars[guitars.indexOf(guitar)]
     .products__image
         img(src="assets/img/guitar.png" alt="guitar")
@@ -53,8 +50,7 @@
         each baguette in baguettes
             li
                 span.item1= baguette
-                span.item2(id="info-baguette-" + baguettes.indexOf(baguette) data-name="baguette") Ingredientes
-                span.item4(id="menu-baguette-"+baguettes.indexOf(baguette) data-name="baguette") Con menú
+                span.item2(id="info-baguette-" + baguettes.indexOf(baguette) data-name="baguette") HAZLO MENÚ / +INFO
                 span.item3= priceBaguettes[baguettes.indexOf(baguette)]
     .products__image
         img(src="assets/img/baguette.png" alt="baguette")
@@ -65,8 +61,7 @@
         each pizza in pizzas
             li
                 span.item1= pizza
-                span.item2(id="info-pizza-" + pizzas.indexOf(pizza) data-name="pizza") Ingredientes
-                span.item4(id="menu-pizza-"+pizzas.indexOf(pizza) data-name="pizza") Con menú
+                span.item2(id="info-pizza-" + pizzas.indexOf(pizza) data-name="pizza") HAZLO MENÚ / +INFO
                 span.item3= pricePizzas[pizzas.indexOf(pizza)]
     .products__image
         img(src="assets/img/pizza.png" alt="pizza")
@@ -77,8 +72,7 @@
         each panini in paninis
             li
                 span.item1= panini
-                span.item2(id="info-panini-" + paninis.indexOf(panini) data-name="panini") Ingredientes
-                span.item4(id="menu-panini-"+paninis.indexOf(panini) data-name="panini") Con menú
+                span.item2(id="info-panini-" + paninis.indexOf(panini) data-name="panini") HAZLO MENÚ / +INFO
                 span.item3= pricePaninis[paninis.indexOf(panini)]
     .products__image
         img(src="assets/img/panini.png" alt="panini")
@@ -89,8 +83,7 @@
         each sandwich in sandwiches
             li
                 span.item1= sandwich
-                span.item2(id="info-sandwich-" + sandwiches.indexOf(sandwich) data-name="sandwich") Ingredientes
-                span.item4(id="menu-sandwich-"+sandwiches.indexOf(sandwich) data-name="sandwich") Con menú
+                span.item2(id="info-sandwich-" + sandwiches.indexOf(sandwich) data-name="sandwich") HAZLO MENÚ / +INFO
                 span.item3= priceSandwiches[sandwiches.indexOf(sandwich)]
     .products__image
         img(src="assets/img/sandwich.png" alt="sandwich")
@@ -101,8 +94,7 @@
         each hotDog in hotDogs
             li
                 span.item1= hotDog
-                span.item2(id="info-hotdog-" + hotDogs.indexOf(hotDog) data-name="hotdog") Ingredientes
-                span.item4(id="menu-hotdog-"+hotDogs.indexOf(hotDog) data-name="hotdog") Con menú
+                span.item2(id="info-hotdog-" + hotDogs.indexOf(hotDog) data-name="hotdog") HAZLO MENÚ / +INFO
                 span.item3= priceHotDogs[hotDogs.indexOf(hotDog)]
     .products__image
         img(src="assets/img/hotdog.png" alt="hot dog")
