--- a/dev/views/includes/sandwich-ingredients.pug
+++ b/dev/views/includes/sandwich-ingredients.pug
@@ -9,6 +9,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Sandwich mixto +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/sandwich-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #chicken-sandwich-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes sandwich de pollo:
@@ -18,6 +26,14 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Sandwich de pollo +Bebida +Patatas
+                p 4,00€
+                .ingredients__img
+                    img(src="assets/img/sandwich-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #inkwell-sandwich-ingredients.lightbox
     ul.ingredients
@@ -29,6 +45,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Sandwich tintero +Bebida +Patatas
+                p 4,00€
+                .ingredients__img
+                    img(src="assets/img/sandwich-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #vegetable-sandwich-ingredients.lightbox
     ul.ingredients
@@ -44,6 +68,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Sandwich vegetal +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/sandwich-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #special-sandwich-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes sandwich especial:
@@ -55,3 +87,11 @@
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Sandwich especial +Bebida +Patatas
+                p 4,00€
+                .ingredients__img
+                    img(src="assets/img/sandwich-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
