--- a/dev/views/includes/starters-allergens.pug
+++ b/dev/views/includes/starters-allergens.pug
@@ -5,6 +5,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Nuggets +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #croquette-starter-allergens.lightbox
     .ingredients
         center
@@ -12,6 +20,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Croquetas +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #dumpling-starter-allergens.lightbox
     .ingredients
@@ -21,6 +37,14 @@
             img.ingredients__allergen(src='assets/img/gallery/fish.svg' alt='fish')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Empanadillas +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #sanjacobo-starter-allergens.lightbox
     .ingredients
         center
@@ -29,10 +53,63 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
-#chips-starter-allergens.lightbox
+            h4 Menú:
+                p San jacobos +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+#twister-starter-allergens.lightbox
     .ingredients
         center
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Twister +Bebida +Patatas
+                p 6,50€
+                .ingredients__img
+                    img(src="assets/img/fried-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+
+
+
+
+//#fingers-starter-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Fingers +Bebida +Patatas
+//            p 4,50€
+//            .ingredients__img
+//                img(src="assets/img/fried-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
+//
+//#torpedo-starter-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Torpedo +Bebida +Patatas
+//            p 6,50€
+//            .ingredients__img
+//                img(src="assets/img/fried-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
+//
+//#chickendelicacies-starter-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Delicias de pollo +Bebida +Patatas
+//            p 4,50€
+//            .ingredients__img
+//                img(src="assets/img/fried-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
