--- a/dev/views/includes/baguette-ingredients.pug
+++ b/dev/views/includes/baguette-ingredients.pug
@@ -12,6 +12,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette vegetal +Bebida +Patatas
+                p 4,30€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #tuna-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de atún:
@@ -25,6 +33,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de atún +Bebida +Patatas
+                p 4,30€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #ham-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de jamón:
@@ -35,6 +51,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de jamón +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #chicken-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de pollo:
@@ -44,6 +68,14 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Baguette de pollo +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #bacon-baguette-ingredients.lightbox
     ul.ingredients
@@ -56,6 +88,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de bacon y queso +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #tortilla-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de tortilla francesa:
@@ -66,6 +106,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Baguette de tortilla francesa +Bebida +Patatas
+                p 4,30€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #hamtortilla-baguette-ingredients.lightbox
     ul.ingredients
@@ -78,6 +126,14 @@
             img.ingredients__allergen(src='assets/img/gallery/egg.svg' alt='egg')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de tortilla y jamón +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #maigrette-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de magreta:
@@ -87,6 +143,14 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Baguette de magreta +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #loin-baguette-ingredients.lightbox
     ul.ingredients
@@ -98,6 +162,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de lomo +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #freshloin-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de lomo fresco:
@@ -107,6 +179,14 @@
             h4 Alérgenos:
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Baguette de lomo fresco +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #squid-baguette-ingredients.lightbox
     ul.ingredients
@@ -119,6 +199,14 @@
             img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de calamares +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #sausages-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de salchichas:
@@ -130,6 +218,14 @@
             img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Baguette de salchichas +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #special-baguette-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes baguette de calamares:
@@ -140,3 +236,11 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/mollusks.svg' alt='mollusks')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Baguette especial +Bebida +Patatas
+                p 4,50€
+                .ingredients__img
+                    img(src="assets/img/baguette-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
