--- a/dev/views/includes/panini-ingredients.pug
+++ b/dev/views/includes/panini-ingredients.pug
@@ -9,6 +9,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Panini york +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/panini-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #ham-panini-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes panini serrano:
@@ -19,6 +27,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Panini serrano +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/panini-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #bacon-panini-ingredients.lightbox
     ul.ingredients
@@ -31,6 +47,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Panini bacon +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/panini-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #crab-panini-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes panini cangrejo:
@@ -42,6 +66,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Panini crangrejo +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/panini-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #bbq-panini-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes panini BBQ:
@@ -52,3 +84,11 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Panini BBQ +Bebida +Patatas
+                p 3,50€
+                .ingredients__img
+                    img(src="assets/img/panini-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
