--- a/dev/views/includes/pizza-ingredients.pug
+++ b/dev/views/includes/pizza-ingredients.pug
@@ -9,6 +9,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Pizza margarita +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #campera-pizza-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes pizza de margarita:
@@ -20,6 +28,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Pizza campera +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #mince-pizza-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes pizza de carne picada:
@@ -30,6 +46,14 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Pizza de carne picada +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
 
 #crab-pizza-ingredients.lightbox
     ul.ingredients
@@ -44,6 +68,14 @@
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
 
+            h4 Menú:
+                p Pizza de cangrejo +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
 #bacon-pizza-ingredients.lightbox
     ul.ingredients
         h3 Ingredientes pizza de bacon:
@@ -54,3 +86,67 @@
             img.ingredients__allergen(src='assets/img/gallery/gluten.svg' alt='gluten')
             img.ingredients__allergen(src='assets/img/gallery/dairyProducts.svg' alt='dairy products')
             img.ingredients__allergen(src='assets/img/gallery/sulfurDioxideSulphites.svg' alt='sulfur dioxide sulphites')
+
+            h4 Menú:
+                p Pizza de bacon +Bebida +Patatas
+                p 5,50€
+                .ingredients__img
+                    img(src="assets/img/pizza-min.png")
+                    img(src="assets/img/drink-min.png")
+                    img(src="assets/img/chips-min.png")
+
+
+//#kebab-pizza-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Pizza de kebab +Bebida +Patatas
+//            p 5,50€
+//            .ingredients__img
+//                img(src="assets/img/pizza-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
+//
+//#frankfurt-pizza-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Pizza de frankfurt +Bebida +Patatas
+//            p 5,50€
+//            .ingredients__img
+//                img(src="assets/img/pizza-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
+//
+//#fourcheese-pizza-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Pizza cuatro quesos +Bebida +Patatas
+//            p 5,50€
+//            .ingredients__img
+//                img(src="assets/img/pizza-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
+//
+//#chickenbacon-pizza-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Pizza de pollo y bacon +Bebida +Patatas
+//            p 5,50€
+//            .ingredients__img
+//                img(src="assets/img/pizza-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
+//
+//#mini-pizza-menu.lightbox
+//    .ingredients
+//        center
+//            h4 Menú:
+//            p Mini-Pizza +Bebida +Patatas
+//            p 3,50€
+//            .ingredients__img
+//                img(src="assets/img/pizza-min.png")
+//                img(src="assets/img/drink-min.png")
+//                img(src="assets/img/chips-min.png")
